--- a/res/layout-large/contactview.xml
+++ b/res/layout-large/contactview.xml
@@ -3,13 +3,13 @@
     android:id="@android:id/tabhost"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#ffffff" >
+    android:background="@color/White" >
      
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:background="#ffffff" >
+        android:background="@color/White" >
         
         <RelativeLayout
 	        android:layout_width="fill_parent"
@@ -39,7 +39,7 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             android:foregroundGravity="bottom|fill_horizontal"
-            android:background="#ffffff" >
+            android:background="@color/White" >
             
 	        <LinearLayout  
 	            android:id="@+id/title_layout"  
@@ -67,14 +67,6 @@
 	          
 	    </FrameLayout>    
         <!--added by yu zhang  -->
-
-        <LinearLayout
-            android:id="@+id/settingTab"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical" 
-            android:background="#ffffff">
-        </LinearLayout>
 
         <TabWidget
             android:id="@android:id/tabs"
