--- a/res/layout-large/splashview.xml
+++ b/res/layout-large/splashview.xml
@@ -5,35 +5,38 @@
     android:background="#ffffff"
     android:orientation="vertical" >
 
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/imageView1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="43dp"
+        android:text="@string/welcome_page_text"
+        android:textColor="@color/Red"
+        android:textSize="40sp" />
+
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="230dp"
         android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:src="@drawable/welcom" />
-
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="184dp"
-        android:text="TeleMedicine"
-        android:textColor="#000000"
-        android:textSize="40sp" />
+        android:layout_marginTop="53dp"
+        android:contentDescription="@string/welcome_page_picture"
+        android:src="@drawable/medicalkit_launcher2" />
 
     <Button
         android:id="@+id/welcomeButton"
+        style="@android:style/MediaButton.Ffwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/titleTextView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp"
-        android:background="#ffffff"
+        android:layout_marginTop="54dp"
+        android:background="@color/White"
         android:text="@string/welcom_TM"
-        android:textColor="#0099cc"
+        android:textColor="#0b84aa"
         android:textSize="30sp" />
 
 </RelativeLayout>
