--- a/res/layout/splashview.xml
+++ b/res/layout/splashview.xml
@@ -5,25 +5,6 @@
     android:background="#ffffff"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="230dp"
-        android:layout_height="200dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/welcom" />
-
-    <TextView
-        android:id="@+id/titleTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="184dp"
-        android:text="TeleMedicine"
-        android:textColor="#000000"
-        android:textSize="40sp" />
-
     <Button
         android:id="@+id/welcomeButton"
         android:layout_width="wrap_content"
@@ -35,5 +16,25 @@
         android:text="@string/welcom_TM"
         android:textColor="#0099cc"
         android:textSize="30sp" />
+
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/welcome_page_text"
+        android:textColor="@color/Red"
+        android:textSize="40sp" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="230dp"
+        android:layout_height="200dp"
+        android:layout_above="@+id/titleTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="14dp"
+        android:contentDescription="@string/welcome_page_picture"
+        android:src="@drawable/medicalkit_launcher2" />
 
 </RelativeLayout>
