--- a/res/layout-large/contactview.xml
+++ b/res/layout-large/contactview.xml
@@ -16,12 +16,13 @@
 	        android:layout_height="wrap_content" >
 	            
             <ImageButton
-                android:layout_width="120dp"
+                android:layout_width="40dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:contentDescription="@string/add_contact"
                 android:onClick="goToAddContactView"
-                android:src="@drawable/ic_action_add_person" />
+                android:src="@drawable/add_contact"
+                android:background="@color/White" />
 	            
         </RelativeLayout>
         
