--- a/res/layout/contact_item.xml
+++ b/res/layout/contact_item.xml
@@ -28,12 +28,14 @@
         android:layout_height="50dip" >
 
         <ImageView
-            android:layout_width="wrap_content"
+            android:id="@+id/head_portrait"
+            android:layout_width="60dip"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="10dip"
             android:layout_marginRight="10dip"
-            android:src="@drawable/ic_launcher" />
+            android:contentDescription="The doctore head"
+            android:src="@drawable/contact_8" />
 
         <TextView
             android:id="@+id/name"
